--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="120dp"
     android:background="@color/colorWhite"
     android:orientation="horizontal"
     android:padding="8dp">
@@ -17,9 +17,11 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignTop="@id/imageView"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_toRightOf="@id/imageView"
         android:orientation="vertical">
 
@@ -42,7 +44,7 @@
             android:layout_below="@id/name"
             android:layout_marginLeft="@dimen/left_margin_list"
             android:layout_marginRight="@dimen/right_margin_list"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:textColor="@color/lightGray"
             android:textSize="12sp"
             tools:text="Author" />
@@ -54,7 +56,7 @@
             android:layout_below="@id/author"
             android:layout_marginLeft="@dimen/left_margin_list"
             android:layout_marginRight="@dimen/right_margin_list"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="8dp"
             tools:text="Description"
             android:textColor="@color/black"
             android:textSize="14sp" />
