--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView"
         android:layout_width="@dimen/thumbnail_width"
         android:layout_height="@dimen/thumbnail_height"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="@dimen/left_margin_list"
         android:scaleType="fitXY" />
 
@@ -19,9 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignTop="@id/imageView"
-        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="4dp"
         android:layout_toRightOf="@id/imageView"
         android:orientation="vertical">
 
@@ -32,8 +32,10 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="@dimen/left_margin_list"
             android:layout_marginRight="@dimen/right_margin_list"
+            android:layout_alignParentLeft="true"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:layout_marginTop="4dp"
+            android:textSize="16sp"
             android:textStyle="bold"
             tools:text="ABC" />
 
@@ -45,21 +47,38 @@
             android:layout_marginLeft="@dimen/left_margin_list"
             android:layout_marginRight="@dimen/right_margin_list"
             android:layout_marginTop="4dp"
+            android:layout_alignParentLeft="true"
             android:textColor="@color/lightGray"
-            android:textSize="12sp"
+            android:textSize="14sp"
             tools:text="Author" />
 
         <TextView
-            android:id="@+id/desc"
+            android:id="@+id/language"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/author"
             android:layout_marginLeft="@dimen/left_margin_list"
             android:layout_marginRight="@dimen/right_margin_list"
-            android:layout_marginTop="8dp"
-            tools:text="Description"
-            android:textColor="@color/black"
+            android:layout_marginTop="4dp"
+            tools:text="En"
+            android:textColor="@color/lightGray"
             android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/author"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="@dimen/left_margin_list"
+            android:layout_marginRight="@dimen/right_margin_list"
+            android:layout_marginTop="4dp"
+            tools:text="INR"
+            android:textColor="@color/lightGray"
+            android:textSize="14sp" />
+
+
+
 
     </RelativeLayout>
 
